--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
+solc_version = "0.8.23"
+evm_version = 'shanghai'
+auto_detect_solc = true
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
